--- a/.github/workflows/main_mern-charts.yml
+++ b/.github/workflows/main_mern-charts.yml
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: dockerdemotesting.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b5e983a426ef4816abee96a63b237b8f }}/mern-charts:${{ github.sha }}
+        tags: dockerdemotesting.azurecr.io/mern-charts:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -48,4 +48,4 @@ jobs:
         app-name: 'mern-charts'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_13f4e177d9eb445a86478e1efc21a941 }}
-        images: 'dockerdemotesting.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b5e983a426ef4816abee96a63b237b8f }}/mern-charts:${{ github.sha }}'
+        images: 'dockerdemotesting.azurecr.io/mern-charts:${{ github.sha }}'
