--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
   "author": "akash",
   "license": "ISC",
   "dependencies": {
-    "@mozilla/readability": "^0.4.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsdom": "^16.5.1",
-    "node-jsdom": "^3.1.5",
-    "selenium-webdriver": "^4.0.0-beta.2"
+    "express": "^4.17.1"
   }
 }
