--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "akash",
   "license": "ISC",
   "dependencies": {
+    "@azure/identity": "^1.3.0",
     "@azure/keyvault-secrets": "^4.2.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
